--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
   "cleanup": true,
   "theme": "cards",
   "theme-style": "./custom.css",
-  "footer": "Copyright Text",
+  "footer": "Copyright © 2021 Justin Jones",
   "usage-stats": false
 }
