--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "sort-media-by": "filename",
   "download-photos": "copy",
   "cleanup": true,
-  "theme": "cards",
+  "theme": "mosaic",
   "theme-style": "./custom.css",
   "footer": "Copyright © 2021 Justin Jones",
   "usage-stats": false
